# reef-chat-pathway

./: .env.dev  .gitignore  README.md
.github/workflows/: embedder.yaml  indexer.yaml
agents/: .dockerignore  .env.dev  .gitignore  Dockerfile  config.py  main.py  pyproject.toml  router_utilities.py
agents/api/: usecases.py
agents/services/: carp_services.py  moray_services.py  multihop_service.py  squid_services.py
agents/utils/: api_checker.py  file_extractor.py  file_parser.py  metadata_generator.py  pdf_highlighter.py  reranker.py
agents/utils/code_architect_utils/: final_formatter.py  logic_tool.py  prompts.py  tool_docstrings.py
agents/utils/equity_generation_utils/: cost_tracker.py  equity_research_content.py  equity_research_generator.py  financial_metrics.py  report_gen_chart_tool.py  template_equity.py
agents/utils/financial_generation_utils/: cost_tracker.py  financial_report_content.py  financial_report_generator.py
agents/utils/moray_utils/: joiner.py  output_parser.py  planner.py  prompts.py  scheduler.py  state_manager.py  tool_descriptions.py  tool_manager.py
agents/utils/squid_utils/: flow_tracker.py  squid_manager.py  squid_planner.py  squid_prompts.py
agents/utils/squid_utils/squid_registry/: dcf_tool.py  get_actions.py  get_financials.py  get_historical_data.py  get_holders.py  get_news.py  get_option_chain.py  get_options.py  get_recommendations.py  get_shares_count.py  get_stock_info.py
agents/utils/tools/: compliance_checker.py  esg_comparison.py  financial_analyst.py  graph_tool.py  ipr_agent.py  legal_analyst.py  math_tools.py  multihop_tool.py  pdf_read_tool.py  report_gen_tool.py  search_tools.py  similar_case.py  sql_tool.py  valuation_tool.py
agents/utils/tools/similar_case_agent/: ik.py
embedder/: .dockerignore  .gitignore  Dockerfile  config.py  modal_service.py  pyproject.toml
guardrails/: guard.py  pyproject.toml
guardrails/config/: config.yml  prompts.yml  topics.co
indexer/: .dockerignore  .env.dev  .gitignore  Dockerfile  config.py  main.py  pyproject.toml
indexer/api/: routes.py
indexer/services/: document_store.py  drive_connector.py  drive_service.py  indexer.py
indexer/utils/: custom_splitter.py  embedding_client.py  enhance_metadata.py  file_extractor.py  file_parser.py
interface/: .env.dev  Dockerfile  config.py  main.py  pyproject.toml
interface/services/: conversation_handler.py
