[tool.poetry]
name = "guardrails"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, < 3.12"
nemoguardrails = "^0.11.0"
pydantic = "^2.10.1"
openai = "^1.55.0"
langchain-openai = "^0.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
