[tool.poetry]
name = "interface"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic-settings = "^2.6.1"
aiohttp = "^3.11.7"
openai = "^1.55.0"
python-multipart = "^0.0.17"
motor = "^3.6.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
